--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "cn.artaris.hencodepractice"
+        applicationId "cn.artaris.customview"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
